<resources>
    <string name="app_name">PeoplesBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="paymentService">Payment Service</string>
    <string name="oneTimeBillPayment">One Time Bill Payment</string>
    <string name="favouriteBillPayment">Favourite Bill Payment</string>
    <string name="manageFavouriteBills">Manage Favourite Bills</string>
    <string name="billPaymentHistory">Bill Payment History</string>
    <string name="loanPayment">Loan Payment </string>
    <string name="creditCardPayment">Credit Card Service</string>
    <string name="fromAccount">From Account</string>
    <string name="serviceProvider">Service Provider</string>
    <string name="accountNumber">Account Number</string>
    <string name="amount">Amount</string>
    <string name="paymentDate">Payment Date</string>
    <string name="next">Next</string>
    <string name="cheque_service">Cheque Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cheque_status_inquiry">Cheque Status</string>
    <string name="unrealize_cheque_status_inquiry">Unrealize Cheque Status</string>
    <string name="chequeNo">Cheque No</string>
    <string name="chequeStatus">Cheque Status</string>
    <string name="fixDepositInterestRate">Fix Deposit Interest Rate</string>
    <string name="savingInterestRate">Saving Interest Rate</string>
    <string name="fixDepositProduct">Fix Deposit Product</string>

    <string-array name="sample_data_name">
        <item>Ranjula</item>
        <item>Ranjula</item>
        <item>Ranjula</item>
        <item>Ranjula</item>
        <item>Category5</item>
        <item>Category6</item>
        <item>Category7</item>
    </string-array>

    <string-array name="sample_acc_data_account">
        <item>LKR 4824 4562 9837 5543</item>
        <item>LKR 4824 4562 9837 5543</item>
        <item>LKR 4824 4562 9837 5543</item>
        <item>LKR 4824 4562 9837 5543</item>
        <item>Category5</item>
        <item>Category6</item>
        <item>Category7</item>
    </string-array>


    <string-array name="sample_acc_data_mobile">
        <item>0713737220</item>
        <item>0777226828</item>
        <item>0713434569</item>
        <item>1111 2222 3333 4444</item>
        <item>Category5</item>
        <item>Category6</item>
        <item>Category7</item>
    </string-array>

</resources>