<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.payment.OneTimeBillPayment">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="560dp"

        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/white_box"
        android:elevation="3dp"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneTimeBillPayment"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">





                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_curvy_tab_edittext"
                    android:elevation="3dp">

                    <EditText
                        android:id="@+id/one_time_payment__amount"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="Rs:00.00"
                        android:inputType="number"
                        android:lines="1"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/fromAccount"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_curvy_tab_edittext"
                    android:elevation="3dp">

                    <TextView
                        android:id="@+id/one_time_payment_from_accounts"
                        android:layout_width="match_parent"
                        android:hint="LKR 5837 6742 3588 2398"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_height="30dp"
                        android:editable="false"
                        android:layout_marginTop="2dp"
                        tools:ignore="Deprecated" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/serviceProvider"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_curvy_tab_edittext"
                    android:elevation="3dp">

                    <TextView
                        android:id="@+id/one_time_payment_service_provider"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="2dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:hint="Select Service Provider..."
                        android:textAlignment="center" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/accountNumber"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_curvy_tab_edittext"
                    android:elevation="3dp">

                    <EditText
                        android:id="@+id/one_time_payment_account_number"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:gravity="left"
                        android:hint="LKR 5837 6742 3588 2398"
                        android:inputType="number"
                        android:lines="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/paymentDate"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_curvy_tab_edittext"
                    android:elevation="3dp">

                    <EditText
                        android:id="@+id/one_time_payment_time_date"
                        android:layout_width="156dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="2021/11/07"
                        android:clickable="true"
                        android:inputType="date"
                        android:lines="1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/one_time_payment_next_button"
                    style="@style/AppButton_next"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</LinearLayout>