<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.payment.PaymentService">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="560dp"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/white_box"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paymentService"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/one_time_bill_pay"
            android:background="@drawable/service_tab"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service_box" />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/one_time_bill_payment" />


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/oneTimeBillPayment"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/service_tab"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service_box" />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/favourite_bill_payment" />


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/favouriteBillPayment"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/service_tab"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service_box" />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/bill_manage" />


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/manageFavouriteBills"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bill_pay_history"
            android:layout_gravity="center"
            android:background="@drawable/service_tab"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service_box" />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/history" />


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/billPaymentHistory"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/service_tab"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service_box" />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/loan_service" />


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/loanPayment"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/service_tab"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service_box" />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card" />


                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/creditCardPayment"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>

